# DeadCells-Clone

./: .gitignore  CMakeLists.txt  fix_and_push.bat  main.py  safe_push.bat  sync_and_push.bat
Classes/: AppDelegate.cpp
Classes/Map/: MapGenerator.h  MapUnit.cpp  MapUnit.h  RoomNode.cpp  RoomNode.h  SceneMap.cpp  SceneMap.h  TileRenderer.cpp  TileRenderer.h
Classes/People/: Arrow.cpp  Arrow.h  Bomb.cpp  Bomb.h  Bow.cpp  Bow.h  DeadArcher.cpp  DeadArcher.h  FlyingObject.cpp  FlyingObject.h  Grenadier.cpp  Grenadier.h  Monster.cpp  Monster.h  MonsterLayer.cpp  MonsterLayer.h  Player.cpp  Player.h  PlayerLayer.cpp  PlayerLayer.h  Shield.cpp  Shield.h  Sword.cpp  Sword.h  Weapon.cpp  Weapon.h  WeaponNode.cpp  WeaponNode.h  Zombie.cpp  Zombie.h  people.h
Classes/Pepole/: Bow.h  Player.h  Sword.cpp  Weapon.cpp  Weapon.h
Classes/Res/: strings.cpp  strings.h
Classes/Resprite/: Resprite.cpp  Resprite.h
Classes/Scene/: GameOver.cpp  GameOver.h  GameScene.cpp  GameScene.h  Loading.cpp  Loading.h  Prison.cpp  Prison.h  StartMenu.cpp  StartMenu.h
Resources/Shaders/: DeadCells.frag  DeadCells.vert
Resources/prison/: decoration_config.json  texture_manifest.json
Resources/prison/tilesets/: prison_chains.tsx  prison_floor_decorations.tsx  prison_plants.tsx  prison_platforms.tsx  prison_tiles.tsx  prison_tiles_sheet.tsx  prison_wall_decorations.tsx  prison_webs.tsx
Resources/room/: map_data.json
Resources/room/Prison/: BossBehemot.tmx  BossBeholder.tmx  BossBeholderExit.tmx  BossTimeKeeper.tmx  CursedDoor.tmx  GardenerCorridor.tmx  GiantEscaped.tmx  GiantEscapedEmpty.tmx  GreenhouseEntrance.tmx  GreenhouseEntranceOpen.tmx  Pr1.tmx  Pr10.tmx  Pr11.tmx  Pr12.tmx  Pr13.tmx  Pr14.tmx  Pr15.tmx  Pr16.tmx  Pr17.tmx  Pr18.tmx  Pr19.tmx  Pr2.tmx  Pr20.tmx  Pr21.tmx  Pr22.tmx  Pr23.tmx  Pr24.tmx  Pr25.tmx  Pr26.tmx  Pr27.tmx  Pr28.tmx  Pr29.tmx  Pr3.tmx  Pr30.tmx  Pr31.tmx  Pr32.tmx  Pr33.tmx  Pr34.tmx  Pr35.tmx  Pr36.tmx  (+52 more)
Resources/xml/: string.xml
proj.win32/: DeadCells.sln  DeadCells.vcxproj  DeadCells.vcxproj.filters
